# comembert

./: Cargo.toml  LICENSE  README.md
scripts/bash/: cm.sh
scripts/fish/: cm.fish
scripts/zsh/: cm.sh
src/: args.rs  config.rs  constants.rs  main.rs
src/commands/: delete.rs  edit.rs  insert.rs  list.rs  mov.rs  prev.rs  utils.rs
src/commands/metadata/: metadata.rs
src/shell/: fish.rs  mod.rs  zsh.rs
