[package]
name = "comembert"
version = "0.1.3"
edition = "2021"

authors = ["Nicolas de Pineda Gutierrez <nicolasdepg@gmail.com>"]
license = "MIT"
description = "A tool to remember commands, search them, and write them to the command line to use"
readme = "README.md"
homepage = "https://github.com/ficolas2/comembert"
repository = "https://github.com/ficolas2/comembert"
keywords = ["cli", "commands", "remember", "command-line", "utilities"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.26"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
fzf-wrapped = "0.1"
clap = { version = "4.5.20", features = ["derive"] }
sysinfo = "0.32"
